<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2010 Jamie McDonald

  This file is part of MusicBrainz for Android.

  MusicBrainz for Android is free software: you can redistribute
  it and/or modify it under the terms of the GNU General Public
  License as published by the Free Software Foundation, either
  version 3 of the License, or (at your option) any later version.

  MusicBrainz for Android is distributed in the hope that it
  will be useful, but WITHOUT ANY WARRANTY; without even the implied
  warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with MusicBrainz for Android. If not, see
  <http://www.gnu.org/licenses/>. -->

<resources>
    
  <string name="app_name">MusicBrainz</string>
    
  <!-- DashboardActivity -->
  <string name="search_hint">Search MusicBrainz</string>
  <string name="description_search">Search</string>
  <string name="dash_scan">Scan</string>
  <string name="dash_collections">Collections</string>
  <string name="dash_donate">Donate</string>
  <string name="dash_about">About</string>
  <string name="login">Log In</string>
  <string name="logout">Log Out</string>
  <string name="welcome">Welcome to MusicBrainz!</string>
  <string name="welcome_loggedin">Logged in as</string>
  
  <string name="searchtype_artist">Artist</string>
  <string name="searchtype_release">Release</string>
  <string name="searchtype_label">Label</string>
  <string name="searchtype_recording">Recording</string>
  
  <!-- Searchable -->
  <string name="search_name">MusicBrainz</string>
  <string name="search_description">Artists and releases</string>

  <!-- LoginActivity -->
  <string name="auth_title">Log In</string>
  <string name="uname_hint">Username</string>
  <string name="pass_hint">Password</string>
  <string name="register_text">Need to register?</string>
  <string name="forgotpass_text">Forgot password?</string>
  <string name="pd_authenticating">Authenticating…</string>
  <string name="login_failure_warning">Invalid username or password.</string>
  <string name="login_connection_warning">Connection failure.</string>
  <string name="description_web">Web link</string>

  <!-- SearchResultsActivity -->
  <string name="no_results">No results found</string>
  <string name="search_bar_artists">Artists -</string>
  <string name="search_bar_rgs">Releases -</string>
  <string name="results_artists">ARTISTS</string>
  <string name="results_releases">RELEASES</string>

  <!-- ReleaseActivity -->
  <string name="release_title">Release</string>
  <string name="label_tracks">tracks</string>
  <string name="no_tags">No tags found</string>
  <string name="edit_login">You must log in before you can edit!</string>
  
  <string name="collection_add_fail">Failed adding release to collection</string>
  <string name="collection_add_success">Added to collection</string>
  <string name="collection_dialog_title">Add to collection</string>

  <!-- ArtistActivity -->
  <string name="artist_title">Artist</string>
  <string name="noreleases">No releases found</string>
  <string name="no_links">No links found</string>
  
  <!-- CollectionsActivity -->
  <string name="collections_title">Collections</string>
  <string name="plural">\'s</string>
  <string name="collections">collections</string>
  
  <plurals name="release_plurals">
    <item quantity="zero">No releases</item>
    <item quantity="one">%d release</item>
    <item quantity="other">%d releases</item>
  </plurals>
  
  <string name="no_collections">You don\'t have any collections.\nAdd collections at musicbrainz.org</string>
  <string name="no_collection_releases">No releases in this collection.\nSearch for releases to add them.</string>
  <string name="collection_remove_fail">Failed to remove release</string>

  <!-- Pager tabs -->
  <string name="tab_releases">RELEASES</string>
  <string name="tab_links">MORE</string>
  <string name="tab_tracks">TRACKS</string>
  <string name="tab_edits">EDIT</string>

  <!-- Edit tabs -->
  <string name="tag_hint">Tag</string>
  <string name="tag_label">Tag</string>
  <string name="rate_label">Rate</string>

  <!-- BarcodeSearchActivity -->
  <string name="barcodesearch_title">Submit Barcode</string>
  <string name="barcode_text">Product code: </string>
  <string name="barcode_hint">Release title</string>
  <string name="barcode_instructions">Search for the appropriate release to add this barcode.</string>

  <!-- ConfirmBarcodeDialog -->
  <string name="barcode_add_header">Submit barcode</string>
  <string name="barcode_add_body">Add this barcode to the following release?</string>
  <string name="barcode_add_info">This will submit and edit that other users can vote on. The barcode will not be added immediately.
  </string>
  <string name="barcode_add_btn">Submit</string>

  <!-- DonateActivity -->
  <string name="donate_title">Donate</string>
  <string name="donate_header">Support the MetaBrainz Foundation with a donation!</string>
  <string name="donate_text">You can donate via PayPal to the non-profit MetaBrainz Foundation, which operates the MusicBrainz
    project.</string>
  <string name="paypal_loading_label">Loading PayPal…</string>
  <string name="paypal_loading_timeout">Connection failure</string>
  <string name="donate_or">OR</string>
  <string name="alt_donate_text">View more options…</string>
  <string name="starting_paypal">PayPal is starting…\nPlease bear with us.</string>

  <!-- AboutActivity -->
  <string name="about_title">About</string>
  <string name="app_name_official">MusicBrainz for Android</string>
  <string name="version_text">Version</string>
  
  <!-- WebView Activity titles -->
  <string name="web_forgot_pass">Forgot Password</string>
  <string name="web_register">Register</string>
  <string name="web_donate">Donation Options</string>

  <!-- IntentErrorActivity -->
  <string name="error_title">Error</string>
  <string name="error_body">Something has gone wrong…\n\nAnother application has tried to show you a MusicBrainz page but
    there was a problem with the Intent URI. You should report this to the developer of the application that you arrived
    from:\n\n</string>

  <!-- Actions -->
  <string name="action_share">Share</string>
  <string name="action_refresh">Refresh</string>
  <string name="action_search">Search</string>
  <string name="action_add_collection">Add to collection</string>
  <string name="action_remove_collection">Remove from collection</string>
  <string name="action_feedback">Feedback</string>
  <string name="action_settings">Settings</string>
  <string name="action_login">Log In</string>
  <string name="action_logout">Log Out</string>

  <!-- Preferences -->
  <string name="preferences_title">Settings</string>
  <string name="settings_search">Search</string>
  <string name="settings_suggestions">Suggestions</string>
  <string name="settings_suggestions_summary">Store and display search suggestions</string>
  <string name="settings_clear">Clear search history</string>
  <string name="settings_other">Other</string>
  <string name="settings_bugsense">Send crash reports?</string>
  <string name="settings_bugsense_summary">Allow anonymous error data to be sent</string>

  <!-- Connection errors -->
  <string name="err_text">There was a problem connecting to the server. Retry?</string>
  <string name="err_pos">Yes</string>
  <string name="err_neg">No</string>
  
  <string name="connection_error">Could not connect to server…</string>
  <string name="connection_error_retry">Retry</string>

  <!-- Toasts -->
  <string name="toast_tag">Tag(s) submitted</string>
  <string name="toast_tag_fail">Tag submission failed</string>
  <string name="toast_rate">Rating submitted</string>
  <string name="toast_rate_fail">Rating submission failed</string>
  <string name="toast_barcode">Barcode submitted</string>
  <string name="toast_barcode_fail">Barcode submission failed</string>
  <string name="toast_search_err">Add some text to search</string>
  <string name="toast_tag_err">Add some text to tag</string>
  <string name="toast_auth_err">Username or password missing</string>
  <string name="toast_logged_in">Logged in</string>
  <string name="toast_logged_out">Logged out</string>
  <string name="toast_feedback_fail">No email client available</string>
  <string name="toast_donate_success">Thanks you for supporting MusicBrainz!</string>
  <string name="toast_donate_canceled">Donation canceled</string>
  <string name="toast_search_cleared">Search history deleted</string>

  <!-- ZXing integration -->
  <string name="zx_title">Install Barcode Scanner?</string>
  <string name="zx_message">This application requires Barcode Scanner. Would you like to install it?</string>
  <string name="zx_pos">Yes</string>
  <string name="zx_neg">No</string>

  <!-- BarcodeDialog -->
  <string name="barcode_header">Barcode not found!</string>
  <string name="barcode_info_log">This barcode is not yet stored in the MusicBrainz database. You can contribute to MusicBrainz by
    adding it to the appropriate release.</string>
  <string name="barcode_info_nolog">This barcode is not yet stored in the MusicBrainz database. You can contribute to MusicBrainz by
    adding it to the appropriate release, but you must log in first.</string>
  <string name="barcode_btn">Add barcode</string>

  <!-- ReleaseSelectionDialog -->
  <string name="rg_title">Select a release</string>
  <string name="rg_text">This title has been released more than once. Choose a specific release from the list.</string>

  <!-- Release group types -->
  <string name="rt_album">Album</string>
  <string name="rt_single">Single</string>
  <string name="rt_ep">EP</string>
  <string name="rt_compilation">Compilation</string>
  <string name="rt_nat">NAT</string>
  <string name="rt_soundtrack">Soundtrack</string>
  <string name="rt_spokenword">Spoken word</string>
  <string name="rt_interview">Interview</string>
  <string name="rt_audiobook">Audio book</string>
  <string name="rt_live">Live</string>
  <string name="rt_remix">Remix</string>
  <string name="rt_other">Other</string>
  <string name="rt_unknown">Unknown</string>

  <!-- Release formats -->
  <string name="fm_cd">CD</string>
  <string name="fm_dvd">DVD</string>
  <string name="fm_sacd">SACD</string>
  <string name="fm_dd">DualDisc</string>
  <string name="fm_ld">LaserDisc</string>
  <string name="fm_md">MiniDisc</string>
  <string name="fm_vinyl">Vinyl</string>
  <string name="fm_cassette">Cassette</string>
  <string name="fm_cartridge">Cartridge</string>
  <string name="fm_rtr">Reel-to-reel</string>
  <string name="fm_dat">DAT</string>
  <string name="fm_dm">Digital Media</string>
  <string name="fm_other">Other</string>
  <string name="fm_wax">Wax Cylinder</string>
  <string name="fm_pr">Piano Roll</string>
  <string name="fm_dcc">Digital Compact Cassette</string>
  <string name="fm_vhs">VHS</string>
  <string name="fm_vcd">Video-CD</string>
  <string name="fm_svcd">Super Video-CD</string>
  <string name="fm_bm">Betamax</string>
  <string name="fm_hdcd">HD Compatible Digital</string>
  <string name="fm_usb">USB Flash Drive</string>
  <string name="fm_sm">SlotMusic</string>
  <string name="fm_umd">Universal Media Disc</string>
  <string name="fm_hddvd">HD-DVD</string>
  <string name="fm_dvda">DVD-Audio</string>
  <string name="fm_dvdv">DVD-Video</string>
  <string name="fm_br">Blu-ray</string>

</resources>
