<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2011 Jamie McDonald

  This file is part of MusicBrainz for Android.

  MusicBrainz for Android is free software: you can redistribute
  it and/or modify it under the terms of the GNU General Public
  License as published by the Free Software Foundation, either
  version 3 of the License, or (at your option) any later version.

  MusicBrainz for Android is distributed in the hope that it
  will be useful, but WITHOUT ANY WARRANTY; without even the implied
  warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with MusicBrainz for Android. If not, see
  <http://www.gnu.org/licenses/>. -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/settings_search">

    <CheckBoxPreference
      android:key="search_suggestions"
      android:title="@string/settings_suggestions"
      android:summary="@string/settings_suggestions_summary"
      android:defaultValue="true" />

    <Preference
      android:key="clear_suggestions"
      android:title="@string/settings_clear" />

  </PreferenceCategory>

  <PreferenceCategory android:title="@string/settings_other">
    
    <CheckBoxPreference
      android:key="send_crashlogs"
      android:title="@string/settings_bugsense"
      android:summary="@string/settings_bugsense_summary"
      android:defaultValue="true" />
    
  </PreferenceCategory>

</PreferenceScreen>
