<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/edit_tab"
  style="@style/Fill"
  android:background="@color/main_fg"
  android:orientation="vertical"
  android:padding="@dimen/home_pad">

  <TextView
    android:id="@+id/login_warning"
    style="@style/Wrap"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/home_pad"
    android:text="@string/edit_login"
    android:textColor="@color/mb_orange_dark"
    android:visibility="gone" />

  <EditText
    android:id="@+id/tag_input"
    style="@style/WrapHeight"
    android:hint="@string/tag_hint"
    android:imeOptions="actionDone"
    android:inputType="textFilter"
    android:singleLine="true" />

  <RatingBar
    android:id="@+id/rating_input"
    style="@style/RatingBar" />

  <LinearLayout
    style="@style/WrapHeight"
    android:layout_marginTop="@dimen/small_pad">

    <Button
      android:id="@+id/tag_btn"
      style="@style/WrapHeight"
      android:layout_weight="1"
      android:drawableRight="@drawable/btn_tag"
      android:text="@string/tag_label" />

    <Button
      android:id="@+id/rate_btn"
      style="@style/WrapHeight"
      android:layout_weight="1"
      android:drawableRight="@drawable/btn_star"
      android:text="@string/rate_label" />
  </LinearLayout>
</LinearLayout>