<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2010 Jamie McDonald

  This file is part of MusicBrainz for Android.

  MusicBrainz for Android is free software: you can redistribute
  it and/or modify it under the terms of the GNU General Public
  License as published by the Free Software Foundation, either
  version 3 of the License, or (at your option) any later version.

  MusicBrainz for Android is distributed in the hope that it
  will be useful, but WITHOUT ANY WARRANTY; without even the implied
  warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with MusicBrainz for Android. If not, see
  <http://www.gnu.org/licenses/>. -->

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/MatchWidth">

  <TextView
    style="@style/DialogHeader"
    android:text="@string/barcode_add_header" />

  <TextView
    style="@style/DialogBody"
    android:text="@string/barcode_add_body" />

  <View style="@style/Separator" />

  <include layout="@layout/list_release" />

  <View style="@style/Separator" />

  <TextView
    style="@style/DialogBody"
    android:text="@string/barcode_add_info"
    android:layout_marginTop="@dimen/std_pad" />

  <Button
    android:id="@+id/barcode_confirm"
    style="@style/StdButton"
    android:text="@string/barcode_add_btn"
    android:layout_marginRight="@dimen/std_pad"
    android:layout_marginLeft="@dimen/std_pad"
    android:layout_marginBottom="@dimen/std_pad" />
</LinearLayout>