<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2012 Jamie McDonald

  This file is part of MusicBrainz for Android.

  MusicBrainz for Android is free software: you can redistribute
  it and/or modify it under the terms of the GNU General Public
  License as published by the Free Software Foundation, either
  version 3 of the License, or (at your option) any later version.

  MusicBrainz for Android is distributed in the hope that it
  will be useful, but WITHOUT ANY WARRANTY; without even the implied
  warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with MusicBrainz for Android. If not, see
  <http://www.gnu.org/licenses/>. -->

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/Match">
  <LinearLayout style="@style/HomeTileRow">

    <Button
      android:id="@+id/scan_btn"
      style="@style/HomeTile"
      android:text="@string/dash_scan"
      android:drawableTop="@drawable/dash_scan" />

    <Button
      android:id="@+id/collection_btn"
      style="@style/HomeTile"
      android:text="@string/dash_collection"
      android:drawableTop="@drawable/dash_collections" />
  </LinearLayout>

  <LinearLayout style="@style/HomeTileRow">

    <Button
      android:id="@+id/donate_btn"
      style="@style/HomeTile"
      android:text="@string/dash_donate"
      android:drawableTop="@drawable/dash_donate" />

    <Button
      android:id="@+id/about_btn"
      style="@style/HomeTile"
      android:text="@string/dash_about"
      android:drawableTop="@drawable/dash_about" />
  </LinearLayout>
</LinearLayout>

