<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2012 Jamie McDonald

  This file is part of MusicBrainz for Android.

  MusicBrainz for Android is free software: you can redistribute
  it and/or modify it under the terms of the GNU General Public
  License as published by the Free Software Foundation, either
  version 3 of the License, or (at your option) any later version.

  MusicBrainz for Android is distributed in the hope that it
  will be useful, but WITHOUT ANY WARRANTY; without even the implied
  warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with MusicBrainz for Android. If not, see
  <http://www.gnu.org/licenses/>. -->

<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/Match">

  <Spinner
    android:id="@+id/donate_spin"
    style="@style/MatchWidth"
    android:layout_marginBottom="@dimen/small_pad" />

  <LinearLayout
    android:id="@+id/donate_button_layout"
    style="@style/MatchWidth"
    android:layout_below="@id/donate_spin">

    <TextView
      android:id="@+id/donate_loading_text"
      style="@style/PayPalLoadingText"
      android:text="@string/paypal_loading_label" />
  </LinearLayout>

  <TextView
    android:id="@+id/donate_or"
    style="@style/Wrap"
    android:layout_below="@id/donate_button_layout"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="@dimen/small_pad"
    android:textSize="20sp"
    android:text="@string/donate_or" />

  <Button
    android:id="@+id/donate_options"
    style="@style/LinkButton"
    android:layout_below="@id/donate_or"
    android:text="@string/alt_donate_text" />

</RelativeLayout>
